WEB | replace titles

--- a/projects/web/templates/found_pets/index.html.twig
+++ b/projects/web/templates/found_pets/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Mascotas Perdidas
+{% block title %}Mascotas Encontradas
 {% endblock %}
 
 {% block stylesheets %}
