--- a/projects/web/templates/home/index.html.twig
+++ b/projects/web/templates/home/index.html.twig
@@ -1,16 +1,22 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Inicio - Pet Finder
+{% endblock %}
 
 {% block body %}
 
-<div class="example-wrapper">
-    <h1 class="text-3xl font-bold">Hello {{ controller_name }}! ✅</h1>
+	<div class="example-wrapper">
+		<h1 class="text-3xl font-bold">Hello
+			{{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/src/Controller/HomeController.php</code></li>
-        <li>Your template at <code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/templates/home/index.html.twig</code></li>
-    </ul>
-</div>
+		This friendly message is coming from:
+		<ul>
+			<li>Your controller at
+				<code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/src/Controller/HomeController.php</code>
+			</li>
+			<li>Your template at
+				<code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/templates/home/index.html.twig</code>
+			</li>
+		</ul>
+	</div>
 {% endblock %}
