--- a/projects/web/templates/admin/index.html.twig
+++ b/projects/web/templates/admin/index.html.twig
@@ -1,20 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Panel de Administración - Pet Finder
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: #F5F5F5;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<div class="example-wrapper">
+		<h1>Hello
+			{{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/src/Controller/AdminController.php</code></li>
-        <li>Your template at <code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/templates/admin/index.html.twig</code></li>
-    </ul>
-</div>
+		This friendly message is coming from:
+		<ul>
+			<li>Your controller at
+				<code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/src/Controller/AdminController.php</code>
+			</li>
+			<li>Your template at
+				<code>/home/usuario/Escritorio/Aircury/SummerOfCode/Pet-finder/projects/web/templates/admin/index.html.twig</code>
+			</li>
+		</ul>
+	</div>
 {% endblock %}
