--- a/projects/web/templates/base.html.twig
+++ b/projects/web/templates/base.html.twig
@@ -19,6 +19,7 @@
 	</head>
 	<body>
 		{% include 'components/NavBar.html.twig' %}
+		{% include 'components/FlashMessages.html.twig' %}
 		{% block body %}{% endblock %}
 		{% include 'components/Footer.html.twig' %}
 
