--- a/projects/web/templates/components/FlashMessages.html.twig
+++ b/projects/web/templates/components/FlashMessages.html.twig
@@ -7,7 +7,8 @@
 {# HTML Structure #}
 <div id="flash-container" class="flash-container">
     {% for label, messages in app.flashes %}
-        {% for message in messages %}
+        {% if messages|length > 0 %}
+            {% set message = messages|first %}
             <div class="flash-message flash-{{ label }}" data-type="{{ label }}">
                 <div class="flash-content">
                     <span class="flash-icon">
@@ -25,6 +26,6 @@
                 </div>
                 <button class="flash-close" onclick="this.parentElement.remove()">×</button>
             </div>
-        {% endfor %}
+        {% endif %}
     {% endfor %}
 </div>
