WEB | feat: add utility script and update share button functionality to use copyToClipboard

--- a/projects/web/templates/base.html.twig
+++ b/projects/web/templates/base.html.twig
@@ -24,5 +24,6 @@
 		{% include 'components/Footer.html.twig' %}
 
 		<script src="{{ asset('page/base/menu_navigation.js') }}"></script>
+		<script src="{{ asset('page/base/utils.js') }}"></script>
 	</body>
 </html>
