WEB | feat: make modal contact with the person that make the animal publication

--- a/projects/web/templates/components/Icon.html.twig
+++ b/projects/web/templates/components/Icon.html.twig
@@ -33,6 +33,8 @@
 	{% include 'components/icons/map-pin.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'phone' %}
 	{% include 'components/icons/phone.html.twig' with {size: size, class: class, color: color} %}
+{% elseif name == 'whatsapp' %}
+	{% include 'components/icons/whatsapp.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'alert-triangle' %}
 	{% include 'components/icons/alert-triangle.html.twig' with {size: size, class: class, color: color} %}
 {% elseif name == 'check-circle' %}
